# xontrib-abbrevs

./: .copier-answers.yml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
tests/: test_abbrevs.py  test_xontrib.py
xontrib/: abbrevs.py
