[project]
name = "xontrib-abbrevs"
dynamic = ["version"]
license = {file = "LICENSE"}
description = "Expands input words as you type in xonsh shell."
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: System :: Shells",
    "Topic :: System :: System Shells",
    "Topic :: Terminals",
]
requires-python = ">=3.10"
dependencies = ["xonsh>=0.17", "prompt-toolkit"]
authors = [
    { name = "xontrib-abbrevs", email = "no@no.no" },
]
[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/xonsh/xontrib-abbrevs"
Documentation = "https://github.com/xonsh/xontrib-abbrevs/blob/master/README.md"
Code = "https://github.com/xonsh/xontrib-abbrevs"
"Issue tracker" = "https://github.com/xonsh/xontrib-abbrevs/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = [
    "setuptools>=62",
    "wheel",               # for bdist package distribution
    "setuptools_scm>=8",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["xontrib"]
package-dir = {xontrib = "xontrib"}
platforms = ["any"]
include-package-data = false

[tool.setuptools_scm]

